--- a/src/Quiz/Quiz.css
+++ b/src/Quiz/Quiz.css
@@ -91,6 +91,7 @@
 .letsBeginName {
   align-self: start;
   padding-left: 30px;
+  padding-top: 35px;
 }
 .letsName {
   font-family: 'League Spartan', sans-serif;
