--- a/src/Quiz/LuckySeatAdmin.css
+++ b/src/Quiz/LuckySeatAdmin.css
@@ -28,3 +28,13 @@
   margin-right: 20px;
   color: #fff;
 }
+.update_lucky_seeet_btnn {
+  padding: 5px 10px 10px 10px;
+  border-radius: 20px;
+  color: #000;
+  cursor: pointer;
+  background-color: #1b98f5;
+  text-align: center;
+  width: 200px;
+  margin-top: 20px;
+}
