--- a/src/Quiz/Quiz.css
+++ b/src/Quiz/Quiz.css
@@ -22,7 +22,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   height: 100%;
   width: 100%;
 }
@@ -491,6 +491,22 @@
   height: 2px;
   width: 250px;
 }
+.quizzzz_video {
+  width: 350px;
+  height: 300px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 10px;
+}
+.quizzzz_video video {
+  width: 100%;
+  height: 100%;
+}
+.quizzanilogo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .aniLogo {
   width: 150px;
   height: 100px;
@@ -502,7 +518,7 @@
 .aniLogoTitle {
   width: 200px;
   height: 78px;
-  animation-name: logo;
+  /* animation-name: logo; */
   animation-duration: 4s;
 }
 
@@ -510,7 +526,7 @@
   width: 100%;
   height: 100%;
 }
-@keyframes logo {
+/* @keyframes logo {
   0% {
     margin-top: 80px;
   }
@@ -520,7 +536,7 @@
   100% {
     margin-top: 0px;
   }
-}
+} */
 .celebsImg__Main {
   display: flex;
 }
