--- a/src/Quiz/Quiz.css
+++ b/src/Quiz/Quiz.css
@@ -519,7 +519,7 @@
   width: 200px;
   height: 78px;
   /* animation-name: logo; */
-  animation-duration: 4s;
+  /* animation-duration: 4s; */
 }
 
 .aniLogoTitle img {
