--- a/src/Tour Categories/SelfPlan Tour/SelfPlanTour.css
+++ b/src/Tour Categories/SelfPlan Tour/SelfPlanTour.css
@@ -108,8 +108,8 @@ input[type='number'] {
   outline: none;
 }
 /* .n {
-    display: none;
-  } */
+  display: none;
+} */
 
 .heading {
   font-family: 'newyorkblacklarge';
@@ -201,7 +201,7 @@ input[type='number'] {
   text-align: center;
 }
 /* }
-  city Selection */
+city Selection */
 .selectedcitytours {
   display: flex;
   margin-bottom: 15px;
@@ -221,6 +221,7 @@ input[type='number'] {
 .citySelection {
   width: 100%;
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   padding-top: 30px;
   height: 400px;
@@ -230,7 +231,7 @@ input[type='number'] {
 .citySelection-flex1 {
   flex-basis: 48%;
   /* overflow: auto;
-    overflow-y: hidden; */
+  overflow-y: hidden; */
 }
 .citySelection-flex2 {
   flex-basis: 48%;
