--- a/src/Quiz/Quiz.css
+++ b/src/Quiz/Quiz.css
@@ -22,7 +22,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   height: 100%;
   width: 100%;
 }
@@ -491,7 +491,7 @@
   height: 2px;
   width: 250px;
 }
-.quizzzz_video {
+/* .quizzzz_video {
   width: 350px;
   height: 300px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -500,7 +500,7 @@
 .quizzzz_video video {
   width: 100%;
   height: 100%;
-}
+} */
 .quizzanilogo {
   display: flex;
   flex-direction: column;
@@ -518,15 +518,15 @@
 .aniLogoTitle {
   width: 200px;
   height: 78px;
-  /* animation-name: logo; */
-  /* animation-duration: 4s; */
+  animation-name: logo;
+  animation-duration: 4s;
 }
 
 .aniLogoTitle img {
   width: 100%;
   height: 100%;
 }
-/* @keyframes logo {
+@keyframes logo {
   0% {
     margin-top: 80px;
   }
@@ -536,7 +536,7 @@
   100% {
     margin-top: 0px;
   }
-} */
+}
 .celebsImg__Main {
   display: flex;
 }
