--- a/src/Home components/Navbar/Navbar.css
+++ b/src/Home components/Navbar/Navbar.css
@@ -102,6 +102,8 @@
   right: 5%;
   top: 23px;
   cursor: pointer;
+  /* display: flex; */
+  /* align-items: center; */
 }
 .navhide {
   font-size: 45px;
