--- a/src/Home components/Testimonials/Testimonials.css
+++ b/src/Home components/Testimonials/Testimonials.css
@@ -41,6 +41,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
+  overflow: scroll;
 }
 .testi-content-flex1 {
   flex-basis: 35%;
