--- a/src/SalesAdmin component/BookingTable.css
+++ b/src/SalesAdmin component/BookingTable.css
@@ -301,3 +301,25 @@ h6 {
   right: -20%;
   bottom: 90%;
 }
+.booking-container_del__recorf {
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 9999;
+}
+.booking-container_del__recorf_main {
+  position: absolute;
+  height: 300px;
+  width: 60%;
+  background-color: #fff;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
