--- a/src/SalesAdmin component/BookingRecord.css
+++ b/src/SalesAdmin component/BookingRecord.css
@@ -666,6 +666,82 @@
   display: flex;
   justify-content: center;
 }
+.paymentSuceedViewMain {
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.paymentMainn__Succeed {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.paymentMainn__Succeed h6 {
+  font-family: 'andika';
+  font-size: 18px;
+  font-weight: 700;
+}
+.paymentMainn__Succeed_true {
+  height: 12px;
+  width: 12px;
+  border: 1px solid black;
+  margin-right: 10px;
+  position: relative;
+}
+.paymentMainn__Succeed_true_tick {
+  content: '';
+  position: absolute;
+  top: -10px;
+  left: -6px;
+  color: #3dbe29;
+  font-size: 25px;
+}
+.paymentMainn__Succeed_false {
+  height: 12px;
+  width: 12px;
+  border: 1px solid black;
+  margin-right: 10px;
+}
+.paymentSuceedViewMain___Sub {
+  background-color: #fff;
+  padding: 20px;
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border-radius: 10px;
+}
+.paymentSuceedViewMain___Sub__p {
+  font-family: 'andika';
+  font-size: 18px;
+  font-weight: 500;
+}
+.paymentSuceedViewMain___Sub__btn1,
+.paymentSuceedViewMain___Sub__btn2 {
+  outline: none;
+  border: none;
+  margin-left: 5px;
+  margin-right: 5px;
+  padding: 8px;
+  font-family: 'andika';
+  border-radius: 10px;
+  color: #fff;
+}
+.paymentSuceedViewMain___Sub__btn1 {
+  background-color: #4dd637;
+}
+.paymentSuceedViewMain___Sub__btn2 {
+  background-color: #d82e2f;
+}
 .invoice_sample_mainnn_type {
   position: absolute;
   height: 120vh;
