--- a/src/Virtual/Virtual.css
+++ b/src/Virtual/Virtual.css
@@ -1,10 +1,55 @@
+.virtual__home {
+  height: 100vh;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.virtual__video {
+  object-fit: cover;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
 .virtual_step_1_main {
+  position: absolute;
+  width: 60%;
+  height: 90%;
+  z-index: 2;
+  background: rgba(255, 249, 249, 0.6);
+  border-radius: 10px;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  height: 100vh;
   flex-direction: column;
+}
+.virtual__modal {
+  position: absolute;
+  width: 40%;
+  height: 40%;
+  z-index: 3;
+  background: rgba(255, 249, 249, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border-radius: 10px;
+}
+.virtual__modal p {
   font-family: 'andika';
+  font-weight: 700;
+  font-size: 20px;
+}
+.virtual__modal button {
+  outline: none;
+  border: none;
+  background-color: black;
+  color: #fff;
+  font-family: 'andika';
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 5px 10px;
 }
 .virtual_step_1_main_headdd {
   text-align: center;
@@ -12,9 +57,10 @@
 .virtual_step_1_main_headdd h1,
 .virtual_step_1_main_headdd h4 {
   font-family: 'andika';
+  color: black;
 }
 .virtual_step_1_main_inputs {
-  width: 30%;
+  width: 60%;
 }
 .virtual_step_1_main_inputs_input {
   display: flex;
@@ -25,6 +71,7 @@
   outline: none;
   background-color: #efefef;
   padding: 10px;
+  border-radius: 10px;
 }
 .virtual_step_1_main_inputs_input select option:disabled {
   color: red;
@@ -34,12 +81,14 @@
   outline: none;
   background-color: #efefef;
   padding: 10px;
+  border-radius: 10px;
 }
 .virtual_step_1_main_inputs_input label {
   text-transform: uppercase;
   font-size: 13px;
-  font-weight: 600;
+  font-weight: 700;
   margin-top: 10px;
+  color: black;
 }
 .virtual_step_1_main_inputs_radio {
   display: flex;
@@ -48,6 +97,8 @@
 .virtual_step_1_main_inputs_radio input,
 .virtual_step_1_main_inputs_radio label {
   cursor: pointer;
+  font-weight: 600;
+  color: black;
 }
 .virtual_step_1_main_inputs_radio label {
   margin-left: 16px;
@@ -56,8 +107,9 @@
 .virtual_step_1_main_inputs_radio_lab {
   text-transform: uppercase;
   font-size: 13px;
-  font-weight: 600;
+  font-weight: 700;
   margin-top: 10px;
+  color: black;
 }
 .virtual_step_1_main_btn {
   outline: none;
@@ -100,7 +152,8 @@
   display: inline-block;
   width: 16px;
   height: 16px;
-  background-color: #d4d1d1;
+  /* background-color: #d4d1d1; */
+  background-color: #efefef;
   border-radius: 50%;
   position: absolute;
   left: -18px;
@@ -111,7 +164,8 @@
   display: inline-block;
   width: 16px;
   height: 16px;
-  background-color: #d4d1d1;
+  /* background-color: #d4d1d1; */
+  background-color: #efefef;
   border-radius: 50%;
   position: absolute;
   left: -18px;
@@ -127,4 +181,22 @@
   position: absolute;
   left: -14px;
   top: 9px;
+}
+
+@media screen and (max-width: 360px) {
+  .virtual_step_1_main_headdd h1 {
+    font-size: 20px;
+  }
+  .virtual_step_1_main_headdd h4 {
+    font-size: 16px;
+  }
+  .virtual_step_1_main_inputs_input label {
+    font-size: 12px;
+  }
+  .virtual_step_1_main_inputs_radio_lab {
+    font-size: 12px;
+  }
+  .virtual_step_1_main {
+    width: 90%;
+  }
 }
