time interval set in virtual

--- a/src/Virtual/Virtual.css
+++ b/src/Virtual/Virtual.css
@@ -17,7 +17,8 @@
   width: 60%;
   height: 90%;
   z-index: 2;
-  background: rgba(255, 249, 249, 0.6);
+  /* background: rgba(255, 249, 249, 0.6); */
+  background: rgb(205 200 200 / 60%);
   border-radius: 10px;
   display: flex;
   align-items: center;
@@ -30,6 +31,7 @@
   height: 40%;
   z-index: 3;
   background: rgba(255, 249, 249, 0.6);
+  /* background: rgb(205 200 200 / 60%); */
   display: flex;
   align-items: center;
   justify-content: center;
