--- a/src/Home components/Categories/Categories.css
+++ b/src/Home components/Categories/Categories.css
@@ -15,6 +15,8 @@
   justify-content: space-around;
   width: 100%;
   flex-wrap: wrap;
+  background-color: black;
+  padding: 20px 0px;
 }
 .cat-body {
   border-right: 1px solid rgba(255, 255, 255, 0.13);
@@ -34,6 +36,7 @@
   font-family: 'andika';
   font-size: 15px;
   font-weight: 500;
+  margin: 0;
 }
 .cat-body p:hover,
 .cat-bod p:hover {
@@ -60,9 +63,9 @@
 }
 
 @media screen and (max-width: 480px) {
-  .categories {
+  /* .categories {
     height: 220px;
-  }
+  } */
   .image {
     height: 47px;
     text-align: center;
