--- a/src/Home.css
+++ b/src/Home.css
@@ -31,7 +31,7 @@
 }
 .slider {
   position: relative;
-  z-index: -1;
+  /* z-index: -1; */
 }
 .close {
   display: flex;
@@ -46,12 +46,12 @@
   cursor: pointer;
   background-color: transparent;
 }
-.categories {
+/* .categories {
   position: relative;
   margin-left: 30px;
   bottom: 70px;
   z-index: 1;
-}
+} */
 .selfPlanModals {
   width: 95%;
   height: 90vh;
