--- a/src/Virtual/VirtualHome.css
+++ b/src/Virtual/VirtualHome.css
@@ -13,7 +13,7 @@
   justify-content: center;
   position: relative;
 }
-.virtualHome::before {
+/* .virtualHome::before {
   height: 8%;
   top: -38px;
   left: 0;
@@ -21,13 +21,10 @@
   content: '';
   position: absolute;
   background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, #000000 100%);
-  /* FF3.6-15 */
   background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, #000000 100%);
-  /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, #000000 100%);
-  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#000000', GradientType=0);
-}
+} */
 .virtualHome h1 {
   color: #fff;
   font-family: 'newyorklargeblack';
