--- a/src/Home components/Slider/SliderImage.css
+++ b/src/Home components/Slider/SliderImage.css
@@ -5,6 +5,7 @@
   width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center center;
   position: relative;
 }
 .slidess {
@@ -12,6 +13,7 @@
   width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center center;
   position: relative;
 }
 .slide::after {
@@ -25,7 +27,6 @@
   background: #000;
   height: 100vh;
 }
-
 .slide0 {
   background-image: url(https://images.unsplash.com/photo-1516449731348-c54a3bce2d0d?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1050&q=80);
 }
@@ -42,10 +43,16 @@
   background-image: url(https://images.pexels.com/photos/4094981/pexels-photo-4094981.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500);
 }
 .slide5 {
-  background-image: url(https://firebasestorage.googleapis.com/v0/b/touronapp-248e4.appspot.com/o/slide1.png?alt=media&token=a8583e21-9925-45ee-bc4f-72c53c20869a);
+  background-image: url(https://firebasestorage.googleapis.com/v0/b/touronapp-248e4.appspot.com/o/Slide6.png?alt=media&token=c7f525fa-7cfe-4250-bfca-66225aecd11d);
 }
 .slide6 {
-  background-image: url(https://firebasestorage.googleapis.com/v0/b/touronapp-248e4.appspot.com/o/slide2.png?alt=media&token=cf6b9e8a-df38-49ee-946a-a04485b176dd);
+  background-image: url(https://firebasestorage.googleapis.com/v0/b/touronapp-248e4.appspot.com/o/Slide4.png?alt=media&token=60c7b3a8-b2f1-4618-b5e0-2e440e97f61d);
+}
+.slide7 {
+  background-image: url(https://firebasestorage.googleapis.com/v0/b/touronapp-248e4.appspot.com/o/Slide7.png?alt=media&token=dbbabba3-3747-4802-b453-3c0762f1c185);
+}
+.slide8 {
+  background-image: url(https://firebasestorage.googleapis.com/v0/b/touronapp-248e4.appspot.com/o/Slide5.png?alt=media&token=1cc52464-07fc-4a00-b20a-1b55a84d6fe0);
 }
 .slider_title h1 {
   font-family: 'Dancing Script', cursive;
